# SAMP-API

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  sampapi.sln  sampapi.vcxproj  sampapi.vcxproj.filters
examples/: SettingsLogger.cpp  license_plate_editor.hpp
include/sampapi/: AimStuff.h  Animation.h  CActor.h  CActorPool.h  CAudio.h  CAudioStream.h  CCamera.h  CChat.h  CChatBubble.h  CConfig.h  CDeathWindow.h  CDialog.h  CDownloadWindow.h  CDownloadedFilesPool.h  CEntity.h  CFont.h  CFonts.h  CGame.h  CGangZonePool.h  CHelpDialog.h  CHttpClient.h  CInput.h  CLabel.h  CLabelPool.h  CLicensePlate.h  CLocalPlayer.h  CMakeLists.txt  CMatrix.h  CMenu.h  CMenuPool.h  CNetGame.h  CNetStats.h  CObject.h  CObjectEdit.h  CObjectMaterialText.h  CObjectPool.h  CObjectSelection.h  CPed.h  CPickupPool.h  CPlayerInfo.h  (+30 more)
sampapi/: AimStuff.h  CActor.h  CActorPool.h  CAudioStream.h  CChat.h  CChatBubble.h  CConfig.h  CDeathWindow.h  CFonts.h  CGame.h  CHelpDialog.h  CInput.h  CLabel.h  CLabelPool.h  CLicensePlate.h  CMatrix.h  CMenu.h  CMenuPool.h  CNetGame.h  CNetStats.h  CObject.h  CObjectMaterialText.h  CObjectPool.h  CObjectSelection.h  CRect.h  CScoreboard.h  CSpawnScreen.h  CSrvNetStats.h  CTextDraw.h  CTextDrawPool.h  CTextDrawSelection.h  CVehicle.h  CVehiclePool.h  Commands.h  DebugScript.h  Exception.h  GUI.h  InputHandler.h  KeyStuff.h  RPC.h  (+4 more)
src/: CMatrix.h  CRect.cpp  CRect.h  CVector.cpp  CVector.h  SAMP API.sln  common.cpp  common.h  samp.h
src/0.3.7-R1/: 0.3.7-R1.vcxproj  0.3.7-R1.vcxproj.filters  AimStuff.cpp  (+120 more)
tools/: make_headers.py
(+796 files in other folders)
